fix image stretch

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -273,6 +273,7 @@ h1,h2,h3 {
 .gallery img {
   max-width: 50%;
   border: 4px solid white;
+  object-fit: cover;
 }
 
 /* mobile styles */
